# lms

./: .gitignore  CHANGES_SUMMARY.md  EDITOR_MIGRATION.md  FINAL_SUMMARY.md  README.md  pyproject.toml  pytest.ini
apps/core/: utils.py
apps/courses/tests/: factories.py
apps/learning/: models.py
apps/learning/study/: views.py
apps/learning/teaching/views/: assignments.py
apps/learning/tests/: factories.py
docker-files/: Dockerfile
docs/: setup.md
e2e/: .gitignore  README.md  SETUP.md  conftest.py
e2e/pages/: assignment_page.py  base_page.py  course_page.py  login_page.py  password_reset_page.py  staff_page.py
e2e/tests/: __init__.py  test_course_assignment_verification.py  test_create_course_assignment.py  test_example.py  test_password_reset_invalid_email.py  test_staff_navigation_and_gradebook.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/v1/js/: main.js  vendor.js
frontend/src/v1/js/components/: TiptapEditor.jsx  TiptapEditor.scss  TiptapWrapper.jsx
frontend/src/v1/js/components/editor/: index.js
frontend/src/v1/js/components/tiptap-templates/simple/: README.md  UPGRADE_SUMMARY.md  example.tsx  index.tsx  simple-editor.scss  simple-editor.tsx
frontend/src/v1/js/learning/: solution.js
frontend/src/v1/js/teaching/: studentAssignment.js
frontend/src/v1/scss/center/: style.scss
frontend/src/v1/scss/pages/: _student_submission_comments.scss
frontend/src/v1/styles/: _keyframe-animations.scss  _variables.scss
frontend/webpack/: v1.config.js
lms/jinja2/lms/study/: student_assignment_detail.html
lms/jinja2/lms/teaching/: student_assignment_detail.html
lms/settings/: test.py
