[project]
name = "lms"
version = "0.1.0"
description = "Learning Management System"
requires-python = ">=3.10,<3.11"
dependencies = [
    "setuptools",  # Required by django-choices (pkg_resources)
    "pytz",
    "django-environ>=0.11.2,<0.12.0",
    "rules",
    "sorl-thumbnail>=12.10.0,<12.11.0",
    "python-magic>=0.4.27,<0.5.0",
    "Pillow>=10.3.0,<10.4.0",
    "django-crispy-forms>=2.2,<2.3",
    "crispy-bootstrap3>=2024.1,<2024.2",
    "django-rosetta>=0.10.0,<0.11.0",
    "babel>=2.15.0,<2.16.0",
    "boto3>=1.34.129,<1.35.0",
    "django-ses>=4.1.0,<4.2.0",
    "markdown>=3.5,<4.0",
    "pymdown-extensions>=10.0,<11.0",
    "social-auth-core>=4.5.4,<4.6.0",
    "social-auth-app-django>=5.4.1,<5.5.0",
    "rq>=1.16.2,<1.17.0",
    "django-rq>=2.10.1,<2.11.0",
    "bleach>=6.1.0,<6.2.0",
    "cryptography",
    "djangorestframework>=3.15.2,<3.16.0",
    "rest-pandas==1.1.0",
    "python-json-logger",
    "requests>=2.32.3,<2.33.0",
    "django-model-utils==4.4.0",
    "django-storages>=1.14.3,<1.15.0",
    "django-import-export>=4.0.9,<4.1.0",
    "nbconvert>=7.16.4,<7.17.0",
    "numpy>=1.26.4,<1.27.0",
    "icalendar>=5.0.13,<5.1.0",
    "python-dateutil>=2.9.0.post0,<2.10.0",
    "Django-jinja>=2.11.0,<2.12.0",
    "attrs>=23.2.0,<23.3.0",
    "django-choices==1.7.2",
    "django-vanilla-views==3.0.0",
    "django-autocomplete-light==3.9.4",
    "django-bitfield>=2.2.0,<2.3.0",
    "django-filter>=23.5,<24.0",
    "sqids>=0.4.1,<0.5.0",
    "django-registration-redux>=2.13,<2.14",
    "django-taggit>=5.0.1,<5.1.0",
    "sqlparse>=0.5.0,<0.6.0",
    "django-loginas>=0.3.11,<0.4.0",
    "django-webpack-loader>=3.1.0,<3.2.0",
    "XlsxWriter>=3.2.0,<3.3.0",
    "isoweek>=1.3.3,<1.4.0",
    "django-simple-menu>=2.1.3,<2.2.0",
    "djangorestframework-camel-case>=1.4.2,<1.5.0",
    "django-recaptcha>=4.0.0,<4.1.0",
    "pydantic>=2.10,<2.11",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4.2,<4.5.0",
    "beautifulsoup4",
    "testfixtures",
    "factory_boy>=3.3.0,<3.4.0",
    "pytest==6.2.5",
    "pytest-django",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
    "pytest-pythonpath",
    "time-machine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

